Updated syntax errors and spacing issues in code

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -25,12 +25,10 @@ h2 {
 }
 .footer {
     width: 100%;
-    padding: 0px;
     text-align: center;
 }
 .menu {
     width: 30%;
-    padding: 0px;
 }
 
 /*
